--- a/HeteroData Graph.ipynb
+++ b/HeteroData Graph.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,14 +80,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "node_cat_dict took 0.01 secs to run\n"
+     ]
+    },
     {
      "data": {
       "text/plain": "dict_keys(['note_group', 'pitch', 'program', 'MIDI', 'duration', 'velocity', 'time_sig', 'tempo'])"
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,13 +107,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
-      "text/plain": "['9', '11', '6']"
+      "text/plain": "['9', '6', '11']"
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,23 +143,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "add_node_type took 0.54 secs to run\n",
+      "add_edge_type took 3.01 secs to run\n",
+      "add_types took 3.55 secs to run\n"
+     ]
+    }
+   ],
    "source": [
     "nodes_f, edges_f = add_types(nodes, edges, node_categories)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
       "text/plain": "                                     source        target\n0      -Albert_King_-_Born_Under_A_Bad_Sign      g1601074\n1      -Albert_King_-_Born_Under_A_Bad_Sign      g1577049\n2      -Albert_King_-_Born_Under_A_Bad_Sign      g1575127\n3      -Albert_King_-_Born_Under_A_Bad_Sign  g-1872221027\n4      -Albert_King_-_Born_Under_A_Bad_Sign    g795292196\n...                                     ...           ...\n18857              -B_B_King_-_Rock_Me_Baby      g1750992\n18858              -B_B_King_-_Rock_Me_Baby    g415858330\n18859              -B_B_King_-_Rock_Me_Baby      g1606844\n18860              -B_B_King_-_Rock_Me_Baby      g1605881\n18866              -B_B_King_-_Rock_Me_Baby      g1603959\n\n[2681 rows x 2 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>source</th>\n      <th>target</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>-Albert_King_-_Born_Under_A_Bad_Sign</td>\n      <td>g1601074</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>-Albert_King_-_Born_Under_A_Bad_Sign</td>\n      <td>g1577049</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>-Albert_King_-_Born_Under_A_Bad_Sign</td>\n      <td>g1575127</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>-Albert_King_-_Born_Under_A_Bad_Sign</td>\n      <td>g-1872221027</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>-Albert_King_-_Born_Under_A_Bad_Sign</td>\n      <td>g795292196</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>18857</th>\n      <td>-B_B_King_-_Rock_Me_Baby</td>\n      <td>g1750992</td>\n    </tr>\n    <tr>\n      <th>18858</th>\n      <td>-B_B_King_-_Rock_Me_Baby</td>\n      <td>g415858330</td>\n    </tr>\n    <tr>\n      <th>18859</th>\n      <td>-B_B_King_-_Rock_Me_Baby</td>\n      <td>g1606844</td>\n    </tr>\n    <tr>\n      <th>18860</th>\n      <td>-B_B_King_-_Rock_Me_Baby</td>\n      <td>g1605881</td>\n    </tr>\n    <tr>\n      <th>18866</th>\n      <td>-B_B_King_-_Rock_Me_Baby</td>\n      <td>g1603959</td>\n    </tr>\n  </tbody>\n</table>\n<p>2681 rows × 2 columns</p>\n</div>"
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "data = HeteroData()\n",
@@ -189,13 +206,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "outputs": [
     {
      "data": {
       "text/plain": "(['MIDI', 'note_group'], [('MIDI', 'has', 'note_group')])"
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,13 +226,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "outputs": [
     {
      "data": {
-      "text/plain": "{'x': ['-B_B_King_-_How_Blue_Can_You_Get', '-Albert_King_-_Born_Under_A_Bad_Sign', '-B_B_King_-_Rock_Me_Baby']}"
+      "text/plain": "{'x': ['-B_B_King_-_Rock_Me_Baby', '-Albert_King_-_Born_Under_A_Bad_Sign', '-B_B_King_-_How_Blue_Can_You_Get']}"
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "names_list = flatten_lol(node_edge_categories.values())\n"
@@ -251,13 +268,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "outputs": [
     {
      "data": {
       "text/plain": "True"
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,13 +288,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "outputs": [
     {
      "data": {
       "text/plain": "'-Albert_King_-_Born_Under_A_Bad_Sign'"
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "outputs": [],
    "source": [
     "encoder = Encoder(names_list)"
@@ -302,13 +319,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "encode_nodes took 0.48 secs to run\n"
+     ]
+    },
+    {
      "data": {
-      "text/plain": "array([[2639, 2706],\n       [   0, 2703],\n       [   1, 2703],\n       ...,\n       [2573, 2704],\n       [2588, 2704],\n       [2601, 2704]])"
+      "text/plain": "array([[2639, 2706],\n       [   0, 2703],\n       [   1, 2703],\n       ...,\n       [2614, 2704],\n       [2554, 2704],\n       [2579, 2704]])"
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,13 +348,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "encode_edges took 1.90 secs to run\n"
+     ]
+    },
+    {
      "data": {
-      "text/plain": "array([[2639,    0, 2714],\n       [2639,    1, 2714],\n       [2639,    2, 2714],\n       ...,\n       [2552, 2614, 2717],\n       [2553, 2563, 2717],\n       [2553, 2649, 2716]])"
+      "text/plain": "array([[2639,    0, 2714],\n       [2639,    1, 2714],\n       [2639,    2, 2714],\n       ...,\n       [2552, 2565, 2717],\n       [2553, 2609, 2717],\n       [2553, 2667, 2716]])"
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,13 +376,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "outputs": [
     {
      "data": {
-      "text/plain": "tensor([[2639,    0],\n        [2639,    1],\n        [2639,    2],\n        ...,\n        [2552, 2614],\n        [2553, 2563],\n        [2553, 2649]], dtype=torch.int32)"
+      "text/plain": "tensor([[2639,    0],\n        [2639,    1],\n        [2639,    2],\n        ...,\n        [2552, 2565],\n        [2553, 2609],\n        [2553, 2667]], dtype=torch.int32)"
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "outputs": [],
    "source": [
     "hetero_graph = HeteroData(x=nodes_ten, node_type=node_type, edge_index=edge_index, edge_type=edge_type)"
@@ -391,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "outputs": [
     {
      "name": "stdout",
@@ -446,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "outputs": [
     {
      "name": "stdout",
@@ -471,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "outputs": [],
    "source": [
     "nodes_c = pd.DataFrame((list(C.nodes)), columns=['name'])\n",
@@ -483,21 +514,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Run the script in 0.1545 secs\n"
+      "node_cat_dict took 0.17 secs to run\n",
+      "Run the script in 0.1674 secs\n"
      ]
     }
    ],
    "source": [
-    "tic = time.perf_counter()\n",
-    "node_categories_c = node_cat_dict(nodes_c)\n",
-    "toc = time.perf_counter()\n",
-    "print(f\"Run the script in {toc - tic:0.4f} secs\")"
+    "node_categories_c = node_cat_dict(nodes_c)"
    ],
    "metadata": {
     "collapsed": false
@@ -505,13 +534,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "outputs": [
     {
      "data": {
       "text/plain": "dict_keys(['note_group', 'pitch', 'program', 'MIDI', 'duration', 'velocity', 'time_sig', 'tempo'])"
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,8 +554,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 27,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Couldn't find program: 'false'\n"
+     ]
+    }
+   ],
    "source": [
     "%%script false --no-raise-error\n",
     "\n",
@@ -545,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 28,
    "outputs": [],
    "source": [
     "nodes_full = pd.read_csv('.\\slac\\Contents of Slac\\\\nodes_complete.csv')\n",
@@ -557,13 +594,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 29,
    "outputs": [
     {
      "data": {
       "text/plain": "True"
      },
-     "execution_count": 37,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,27 +619,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 30,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Run the script in 2.01 mins\n"
+      "encode_nodes took 9.72 secs to run\n",
+      "encode_edges took 1.95 mins to run\n",
+      "Run the script in 2.12 mins\n"
      ]
     }
    ],
    "source": [
-    "tic = time.perf_counter()\n",
-    "\n",
     "encoder_f = Encoder(names_list_full)\n",
     "\n",
     "nodes_ten_f = encoder_f.encode_nodes(nodes_full)\n",
     "\n",
     "edges_ten_f = encoder_f.encode_edges(edges_full)\n",
     "\n",
-    "toc = time.perf_counter()\n",
-    "print(f\"Run the script in {(toc-tic)/60:0.2f} mins\")\n",
     "winsound.Beep(400, 700)"
    ],
    "metadata": {
@@ -611,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 31,
    "outputs": [],
    "source": [
     "#TODO: Check what goes wrong\n",
@@ -629,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 32,
    "outputs": [],
    "source": [
     "full_hetero_graph = HeteroData(x=nodes_ten_f, node_type=node_type, edge_index=edge_index, edge_type=edge_type)"
@@ -640,13 +675,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 33,
    "outputs": [
     {
      "data": {
       "text/plain": "HeteroData(\n  x=[84093, 2],\n  node_type=0        Blues_-_Modern-B_B_King_-_Rock_Me_Baby\n1                                   g1365629521\n2              http://purl.org/midi-ld/notes/55\n3              http://purl.org/midi-ld/notes/67\n4                                         dur:2\n                          ...                  \n84088                               timesig:9/8\n84089                               timesig:2/2\n84090                               timesig:8/4\n84091                               timesig:1/8\n84092                               timesig:6/4\nName: name, Length: 84093, dtype: object,\n  edge_index=[702340, 2],\n  edge_type=0                                 g1365629521\n1                                    g1693331\n2                                g-1059250695\n3                                    g1694292\n4                                g-1130800403\n                         ...                 \n702335    http://purl.org/midi-ld/programs/30\n702336    http://purl.org/midi-ld/programs/34\n702337     http://purl.org/midi-ld/programs/0\n702338                                     17\n702339                            timesig:6/4\nName: target, Length: 702340, dtype: object\n)"
      },
-     "execution_count": 42,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "outputs": [],
    "source": [],
    "metadata": {
